DBC22-2008: added letter spacing for rest stop content title location
DBC22-2008: added letter spacing for rest stop content title location

--- a/src/frontend/src/Components/map/mapPopup.scss
+++ b/src/frontend/src/Components/map/mapPopup.scss
@@ -526,6 +526,7 @@
           color: $Type-Secondary;
           font-size: 0.875rem;
           margin-top: 0;
+          letter-spacing: 0.075em;
         }
       }
 
